<resources>
    <string name="app_name">L5</string>


    <string name="getImageButton">Get Image</string>
    <string name="helloButton">Hello</string>
    <string name="getTextButton">Get Text</string>
    <string name="helloText">Hello</string>
    <string name="login_empty_error">empty login</string>
    <string name="password_empty_error">empty password</string>
    <string name="login_hint">enter login</string>
    <string name="password_hint">enter password</string>
    <string name="button_text">Sign</string>
    <string name="checkBox_text">Save login data</string>
    <string name="start_text">Sign in</string>
    <string name="login_data_save_error">login_data_save_error</string>
    <string name="login_data_save_confirm">saved</string>
    <string name="from_contacts_button">Add Debtor</string>
    <string name="start_button">START</string>
</resources>
